<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.myrole.camera_ck.crop.CropImageView
        android:id="@+id/cropImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/preview_control_panel" />

    <LinearLayout
        android:id="@+id/preview_control_panel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <com.myrole.camera_ck.widgets.TextViewCompatTint
            android:id="@+id/cancel_media_action"
            style="@style/PreviewButtonsStyle"
            app:drawableTint="@color/image"
            android:drawableTop="@drawable/ic_clear_white_24dp"
            android:text="@string/preview_controls_cancel" />


        <com.myrole.camera_ck.widgets.TextViewCompatTint
            android:id="@+id/rotate_media_left"
            style="@style/PreviewButtonsStyle"
            android:visibility="gone"
            app:drawableTint="@color/image"
            android:drawableTop="@drawable/ic_rotate_left_white_24dp"
            android:text="@string/preview_controls_rotate_left" />

        <com.myrole.camera_ck.widgets.TextViewCompatTint
            android:id="@+id/rotate_media_right"
            style="@style/PreviewButtonsStyle"
            app:drawableTint="@color/image"
            android:drawableTop="@drawable/ic_rotate_right_white_24dp"
            android:text="@string/preview_controls_rotate_right" />

        <com.myrole.camera_ck.widgets.TextViewCompatTint
            android:id="@+id/crop_image"
            style="@style/PreviewButtonsStyle"
            app:drawableTint="@color/image"
            android:drawableTop="@drawable/ic_arrow_forward_white_24dp"
            android:text="Next" />

    </LinearLayout>
</RelativeLayout>