<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/find_contacst_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.myrole.FacebookConnectActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/back_white_icon" />

        <TextView
            android:visibility="gone"
            android:id="@+id/txt_skip"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/skip"
            android:textAllCaps="true"
            android:textColor="@color/white_text"
            android:textSize="@dimen/font_14" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txt_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/find_fb_friend"
            android:textAllCaps="true"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/font_17" />

        <TextView
            android:id="@+id/txt_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/margin_10"
            android:text="@string/connect_fb_account"
            android:textAllCaps="true"
            android:textColor="@color/white_text"
            android:textSize="@dimen/font_13" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_40"
            android:layout_marginTop="@dimen/margin_40"
            android:src="@drawable/fb_find_pink_icon_1" />


        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_outline"
                android:paddingLeft="@dimen/margin_10"
                android:paddingRight="@dimen/margin_10"
                android:text="@string/connect_facebook"
                android:textColor="@color/white_text"
                android:textSize="@dimen/font_14" />
        </com.balysv.materialripple.MaterialRippleLayout>
    </LinearLayout>
</RelativeLayout>
