<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:src="@drawable/back_pink_icon" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/feedback"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/font_17" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray_line_light" />
    </RelativeLayout>


    <!--<TextView-->
        <!--android:background="@color/cloud_white"-->
        <!--android:padding="@dimen/margin_15"-->
        <!--android:layout_margin="@dimen/margin_15"-->
        <!--android:layout_below="@+id/toolbar"-->
        <!--android:id="@+id/txt_feedback"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="left"-->
        <!--android:text="@string/txt_feedback"-->
        <!--android:textAllCaps="true"-->
        <!--android:textColor="#3e3b3b"-->
        <!--android:textSize="@dimen/font_13"-->
        <!--/>-->

    <Button
        android:layout_centerInParent="true"
        android:id="@+id/btn_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_25"
        android:layout_marginTop="@dimen/margin_25"
        android:background="@drawable/red_button"
        android:paddingLeft="@dimen/margin_80"
        android:paddingRight="@dimen/margin_80"
        android:text="@string/evp_submit"
        android:textColor="@color/white_text"
        android:textSize="@dimen/font_14" />

    <EditText
        android:layout_marginTop="@dimen/margin_30"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginRight="@dimen/margin_15"
        android:background="@color/cloud_white"
        android:gravity="left"
        android:singleLine="false"
        android:id="@+id/edttxt_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_feedback"
        android:imeOptions="actionNext"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:minLines="8"
        android:nextFocusDown="@+id/txt_height"
        android:padding="@dimen/activity_horizontal_margin"
        android:textColor="@color/textColorSecondary"
        android:textSize="@dimen/font_14"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
